creusot/tests/should_fail/prusti/calls/fin_cur.stderr
error[creusot]: the expression's lifetime `'a` must match the current time slice `'curr` (found `&'a mut X`, expected `&'curr mut _`)
 --> fin_cur.rs:7:9
  |
7 |     fin(x)
  |         ^

error: aborting due to previous error

